// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example Example component Lists forms 1`] = `
<div>
  <div>
    <div
      id="form-list-cf1"
    >
      <h2>
        Form One
      </h2>
      <input
        onChange={[Function]}
        type="text"
        value="Form One"
      />
    </div>
  </div>
</div>
`;

exports[`example Example component Shows a form 1`] = `
<div
  id="form-list-cf1"
>
  <h2>
    Form One
  </h2>
  <input
    onChange={[Function]}
    type="text"
    value="Form One"
  />
</div>
`;
